update/edit content, add todo list project

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -157,6 +157,8 @@
                     include a mix of personal and academic applications, completed either individually or collaboratively.
                     Each block includes a brief description, an image, and the technologies used. You can also click the 
                     title of the project, which will route you to it's GitHub repo or an external website that showcases the project.
+                </p>
+                <p style="text-align: center;">
                     To view more projects see my <a href="https://github.com/mdalhlke/" class="menuLink projectTitle">GitHub page</a>.
                 </p>
                 <div class="boxContainerProjects">
@@ -171,14 +173,39 @@
                                 <div class="projectText">
                                     <a href="https://github.com/mdalhlke/twenty-one-game-react" class="menuLink projectTitle">Twenty One</a>
                                     <p>
-                                        Twenty One is a personal project I created to practice my React skills. The goal of the game is a simple -
-                                        get as close to 21 as possible without going over. Click the title above to clone the repository and 
-                                        see the game in action. 
+                                        Twenty One is a personal project I created using React and Tailwind just for fun. The goal of 
+                                        the game is a simple - get as close to 21 as possible without going over. Click the title above 
+                                        to clone the repository and see the game in action. 
                                     </p>
                                 </div>
                                 <div class="projectItems">
                                     <span class="chip">React</span>
                                     <span class="chip">Tailwind</span>
+                                    <span class="chip">npm</span>
+                                    <span class="chip">GitHub</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="boxItem boxProjects">
+                        <div class="projectHeader">
+                            <img src="./pictures/node-todo.png"
+                                alt="Todo List Image."
+                                height="205px"
+                                width="300px"
+                            >
+                            <div class="projectBody">
+                                <div class="projectText">
+                                    <a href="https://github.com/mdalhlke/node-todo-list" class="menuLink projectTitle">To-Do List</a>
+                                    <p>
+                                        This to-do list is a simple, fun personal project I developed using Node.js and EJS.
+                                        To view code or try it out, click the title to navigate to the GitHub repository. 
+                                        There, you can clone and run the command listed on the README to start the server. 
+                                    </p>
+                                </div>
+                                <div class="projectItems">
+                                    <span class="chip">Node.js</span>
+                                    <span class="chip">EJS</span>
                                     <span class="chip">npm</span>
                                     <span class="chip">GitHub</span>
                                 </div>
@@ -203,9 +230,10 @@
                                 <div class="projectText">
                                     <a href="movieFinderAppPage/movieFinderAppPage.html" class="menuLink projectTitle">MovieFinder App</a>
                                     <p>
-                                        MovieFinder is an iOS app I created in my Interaction Design class at LMU. For this project, 
-                                        I used Swift and Xcode to design the app, and used three API calls to gather information. 
-                                        Click the title above to check out and learn more about the app.
+                                        MovieFinder is an iOS app I designed and implemented in my Interaction Design class 
+                                        at LMU. For this project, I used Swift and Xcode to create the app and used three 
+                                        API calls from The Movie Database to gather information. Click the title above to check 
+                                        out and learn more about the app.
                                     </p>
                                 </div>
                                 <div class="projectItems">
@@ -228,7 +256,7 @@
                                     <a href="https://github.com/mealmate-ai/mealmate-cmsi402" class="menuLink projectTitle">Daily Bites</a>
                                     <p>
                                         Daily Bites is my senior capstone project, which I designed and developed with four teammates. 
-                                        I was primarily responsible for the recipe recommendation engine, the chat interface. 
+                                        I was primarily responsible for the recipe recommendation engine and the chat interface. 
                                         We collaborated on the definition and implementation of the DB schema and service APIs.
                                         Also, check out my code in Node.js <i class="bi bi-arrow-right"></i> 
                                         <a href="https://github.com/mdalhlke/recipeRecommendation" class="menuLink">GitHub</a>
@@ -256,8 +284,8 @@
                                     <a href="https://github.com/breelynbetts/HYPER" class="menuLink projectTitle">HYPER!</a>
                                     <p>
                                         Hyper! is an exhilarating and quirky programming language designed for those who want to express 
-                                        their limitless amount of energy. I collaborated with two other LMU students to devise a language 
-                                        that employs speech-like syntax for an easier, more natural experience. Click here to vist Hyper!'s 
+                                        their limitless energy. I collaborated with two other LMU students to devise a language 
+                                        that employs speech-like syntax for an easier, more natural experience. Click here to visit Hyper!'s 
                                         website <i class="bi bi-arrow-right"></i> 
                                         <a href="https://breelynbetts.github.io/HYPER" class="menuLink">WEBSITE!</a>
                                     </p>
@@ -281,9 +309,9 @@
                                 <div class="projectText">
                                     <a href="myArtPortfolioPage/myArtPortfolio.html" class="menuLink projectTitle">Art Portfolio</a>
                                     <p>
-                                        This link will take you to a website filled with pictures of my artwork. I created these pieces in the art 
-                                        classes I took at LMU. And, yes, drawing is another one of my hobbies. However, in this portfolio, you will see 
-                                        different mediums of art, such as drypoint and collagraph. Click on the title to see the webpage.
+                                        This link will take you to a website with pictures of my artwork. I created these 
+                                        pieces in art/animation classes I took at LMU. In this portfolio, you will see different 
+                                        mediums, such as drypoint and collagraph. Click on the title to see the webpage.
                                     </p>
                                 </div>
                                 <div class="projectItems">
@@ -305,10 +333,10 @@
                                 <div class="projectText">
                                     <a href="bakingPage/baking.html" class="menuLink projectTitle">Baker's Workshop</a>
                                     <p>
-                                        Speaking of hobbies, one of my favorite hobbies is baking. So, I made this webpage as a project to show you.
-                                        On this webpage, you will find drop-downs of different kinds of pastries. Each drop-down includes some pictures 
-                                        of things I have baked, a short description of that pastry, a baking tip, and a fun fact. Click on the title to 
-                                        see the webpage.
+                                        One of my favorite hobbies is baking. So, I made this webpage as a project to 
+                                        show you. On this webpage, you will find drop-downs of different kinds of pastries. 
+                                        Each drop-down includes pictures of things I have baked, a short description of that 
+                                        pastry, a baking tip, and a fun fact. Click on the title to see the webpage.
                                     </p>
                                 </div>
                                 <div class="projectItems">
@@ -330,9 +358,10 @@
                                 <div class="projectText">
                                     <a href="https://github.com/mdalhlke/hobyn" class="menuLink projectTitle">Hobyn</a>
                                     <p>
-                                        Are you bored? Do you need a new hobby? Just use Hobyn! Hobyn is a website that matches a person to a 
-                                        hobby that is right for them. All you have to do is take the survey. In this project, I worked with two 
-                                        other students. My job was to work on the Google APIs, but I also contributed to some of the HTML and CSS. 
+                                        Are you bored? Do you need a new hobby? Just use Hobyn! I worked with two other 
+                                        students as part of Google's CSSI to create a website that matches a person to a 
+                                        hobby that is right for them. All you have to do is take the survey. My job was 
+                                        to work on the Google APIs, but I also contributed to some of the HTML and CSS. 
                                         Click on the title to see the webpage.
                                     </p>
                                 </div>
