update Github links

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -52,10 +52,10 @@
                     <h1>My name is <span class="name">Maya Dahlke</span>, and I am a software engineer.</h1>
                 </span>
                 <div class="contacts">
-                    <a href="https://www.linkedin.com/in/mayadahlke/" class="socialLink">
+                    <a href="https://www.linkedin.com/in/mayadahlke" class="socialLink">
                         <i class="bi bi-linkedin" style="font-size: 25px;"></i>
                     </a>
-                    <a href="https://github.com/mdalhlke" class="socialLink">
+                    <a href="https://github.com/mayadahlke" class="socialLink">
                         <i class="bi bi-github" style="font-size: 25px;"></i>
                     </a>
                     <a href="mailto:mdahlke123@gmail.com" class="socialLink">
@@ -159,7 +159,7 @@
                     title of the project, which will route you to it's GitHub repo or an external website that showcases the project.
                 </p>
                 <p style="text-align: center;">
-                    To view more projects see my <a href="https://github.com/mdalhlke/" class="menuLink projectTitle">GitHub page</a>.
+                    To view more projects see my <a href="https://github.com/mayadahlke" class="menuLink projectTitle">GitHub page</a>.
                 </p>
                 <div class="boxContainerProjects">
                     <div class="boxItem boxProjects">
@@ -171,7 +171,7 @@
                             >
                             <div class="projectBody">
                                 <div class="projectText">
-                                    <a href="https://github.com/mdalhlke/twenty-one-game-react" class="menuLink projectTitle">Twenty One</a>
+                                    <a href="https://github.com/mayadahlke/twenty-one-game-react" class="menuLink projectTitle">Twenty One</a>
                                     <p>
                                         Twenty One is a personal project I created using React and Tailwind just for fun. The goal of 
                                         the game is a simple - get as close to 21 as possible without going over. Click the title above 
@@ -196,7 +196,7 @@
                             >
                             <div class="projectBody">
                                 <div class="projectText">
-                                    <a href="https://github.com/mdalhlke/node-todo-list" class="menuLink projectTitle">To-Do List</a>
+                                    <a href="https://github.com/mayadahlke/node-todo-list" class="menuLink projectTitle">To-Do List</a>
                                     <p>
                                         This to-do list is a simple, fun personal project I developed using Node.js and EJS.
                                         To view code or try it out, click the title to navigate to the GitHub repository. 
@@ -259,7 +259,7 @@
                                         I was primarily responsible for the recipe recommendation engine and the chat interface. 
                                         We collaborated on the definition and implementation of the DB schema and service APIs.
                                         Also, check out my code in Node.js <i class="bi bi-arrow-right"></i> 
-                                        <a href="https://github.com/mdalhlke/recipeRecommendation" class="menuLink">GitHub</a>
+                                        <a href="https://github.com/mayadahlke/recipeRecommendation" class="menuLink">GitHub</a>
                                     </p>
                                 </div>
                                 <div class="projectItems">
@@ -356,7 +356,7 @@
                             >
                             <div class="projectBody">
                                 <div class="projectText">
-                                    <a href="https://github.com/mdalhlke/hobyn" class="menuLink projectTitle">Hobyn</a>
+                                    <a href="https://github.com/mayadahlke/hobyn" class="menuLink projectTitle">Hobyn</a>
                                     <p>
                                         Are you bored? Do you need a new hobby? Just use Hobyn! I worked with two other 
                                         students as part of Google's CSSI to create a website that matches a person to a 
